--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 [Oo]bj/
 [Uu]nityGenerated/
 [Ll]ibrary/
+[Aa]ssets/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
