--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 [Oo]bj/
 [Uu]nityGenerated/
 [Ll]ibrary/
-[Aa]ssets/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
@@ -20,6 +19,27 @@
 *.user
 *.unityproj
 *.booproj
+
+# ====== #
+# Assets #
+# ====== #
+*.mat
+*.jpg
+*.png
+*.tif
+*.fbx
+*.prefab
+*.obj
+*.meta
+*.unity
+*.blend
+*.3[Dd][Ss]
+*.tga
+*.wav
+*.bmp
+*.avi
+*.shader
+*.psd
  
 # ============ #
 # OS generated #
