--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 [Oo]bj/
 [Uu]nityGenerated/
 [Ll]ibrary/
-[Aa]ssets/Standard\ Assets
+[Aa]ssets/Standard\ Assets/
 #[Aa]ssets/
  
 # ===================================== #
